--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>BLOG |{% block titulo%}{% endblock titulo %}</title>
+	<title>BLOGgg |{% block titulo%}{% endblock titulo %}</title>
 	<!-- LO QUE ESTA ACA ABAJO ES DE BOOTSTRAP PARA QUE SE VEA UN POQUITO MAS LINDO, NO LE DEN PELOTA -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
